gcc/testsuite/rust/rustc/ui/consts/different-fn-ptr-binders-during-ctfe_dg.rs
const fn cmp(x: fn(&'static ()), y: for<'a> fn(&'a ())) -> bool {
    x == y
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

